# watchtower-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  drift_check.yml
.streamlit/: config.toml
agent/: orchestrator.py  run_store.py
agent/tools/: drift_tools.py  eval_tools.py  retrain_tools.py
airflow/dags/: watchtower_schedule.py
api/: deps.py  main.py  schemas.py
api/routers/: pipeline.py  reports.py
data/: loader.py  loader_factory.py  local_loader.py  s3_loader.py  synthetic.py
drift/: feature_drift.py  report.py  statistical.py  target_drift.py
evaluation/: evaluator.py  summary.py
tests/: conftest.py  test_agent.py  test_api.py  test_drift.py  test_run_store.py
training/: config.py  registry.py
ui/: app.py  data_access.py
ui/components/: drift_charts.py  metric_cards.py  trace_viewer.py
ui/pages/: 1_runs.py  2_agent_trace.py  3_drift.py  4_models.py
